--- a/todo_app/templates/todo_app/index.html
+++ b/todo_app/templates/todo_app/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Task</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'todo_app/css/index.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/static/todo_app/css/index.css">
 </head>
 <body>
     <div class="todo_title">
@@ -47,8 +48,11 @@
                 {% elif t.status|lower == "complete" %}
                 <span class="btn btn-outline-success">{{ t.status }}</span>
                 {% endif %}
+                <a href="{% url 'edit_task' t.id %}" class="btn-action btn-edit">
+                    <i class="bi bi-pencil-square"></i>
+                </a>
                 <a href="{% url 'delete_task' t.id %}" class="btn-action btn-delete">
-                    <i class="fa fa-trash"></i>
+                    <i class="bi-trash"></i>
                 </a>
             </div>
         </div>
